--- a/src/components/home/css/home.scss
+++ b/src/components/home/css/home.scss
@@ -6,30 +6,68 @@
 	background-size: 100% 100%;
 	.home-logo-container {
 		padding-top: 70px;
-		.logo-text {
-			font-family: Karla;
-			font-style: normal;
-			font-weight: bold;
-			font-size: 1.5rem;
-			color: #000000;
+		.logo-txt-container {
+			display: flex;
+			width: 230px;
+			margin: 0 auto;
 			padding: 0px;
-			margin: 0px;
-			span {
+			justify-content: space-between;
+			.logo-txt-mayank {
+				font-family: Karla;
+				font-style: normal;
+				font-weight: bold;
+				font-size: 1.5rem;
+				color: #000000;
+				margin: 0px;
+				width: 48%;
+				text-align: right;
+			}
+			.logo-txt-shekhar {
+				font-family: Karla;
+				font-style: normal;
+				font-weight: bold;
+				font-size: 1.5rem;
+				margin: 0px;
+				padding: 0px;
+				width: 48%;
+				text-align: left;
 				color: #da2426;
 				-webkit-text-stroke-color: black;
 				-webkit-text-stroke-width: 1px;
 			}
 		}
-		.sublogo-text {
-			font-family: Karla;
-			font-style: normal;
-			font-weight: bold;
-			font-size: 1rem;
-			line-height: 20px;
-			letter-spacing: 0.085em;
-			margin: 0px;
+		.sublogo-txt-container {
+			display: flex;
+			width: 230px;
+			margin: 0 auto;
 			padding: 0px;
-			color: rgba(255, 255, 255, 0.5);
+			justify-content: space-between;
+			.sublogo-txt-closeup {
+				font-family: Karla;
+				font-style: normal;
+				font-weight: bold;
+				font-size: 1rem;
+				line-height: 20px;
+				letter-spacing: 0.085em;
+				margin: 0px;
+				padding: 0px;
+				color: rgba(255, 255, 255, 0.5);
+				width: 48%;
+				text-align: right;
+			}
+			.sublogo-txt-magician {
+				font-family: Karla;
+				font-style: normal;
+				font-weight: bold;
+				font-size: 1rem;
+				line-height: 20px;
+				letter-spacing: 0.085em;
+				margin: 0px;
+				padding: 0px;
+				color: rgba(255, 255, 255, 0.5);
+				width: 48%;
+				text-align: left;
+			}
 		}
 	}
 	.home-container {
